[gd_scene load_steps=15 format=4 uid="uid://bhq01jmiupb87"]

[ext_resource type="Script" path="res://scripts/world_01.gd" id="1_yw1rq"]
[ext_resource type="PackedScene" uid="uid://c78k16sm2u2x7" path="res://actors/player.tscn" id="2_qyvkc"]
[ext_resource type="Texture2D" uid="uid://bermueyl8gub8" path="res://assets/Tileset/Terrain.png" id="3_5udkp"]
[ext_resource type="Texture2D" uid="uid://jog5bupojqi4" path="res://assets/Terrain/Terrain (16x16).png" id="3_oy14d"]
[ext_resource type="PackedScene" uid="uid://gn04sehqyptm" path="res://items/door.tscn" id="4_2e0v6"]
[ext_resource type="FontFile" uid="uid://cqsajjqkx6jkj" path="res://fonts/I-pixel-u.ttf" id="4_c0k8e"]
[ext_resource type="Script" path="res://scripts/door.gd" id="5_q6a27"]
[ext_resource type="PackedScene" uid="uid://bcjgp15qo6x8u" path="res://actors/multiplayer_player.tscn" id="8_ydye3"]
[ext_resource type="Script" path="res://levels/character_body_2d.gd" id="10_ypiy8"]
[ext_resource type="Texture2D" uid="uid://dfxs77pw1pd44" path="res://icon.svg" id="11_vbhd1"]
[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="11_xc86x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ewo5w"]
texture = ExtResource("3_oy14d")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0/physics_layer_0/polygon_0/one_way = true
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0/physics_layer_0/polygon_0/one_way = true
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0/physics_layer_0/polygon_0/one_way = true
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p68h2"]
texture = ExtResource("3_5udkp")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hlolr"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_ewo5w")
sources/1 = SubResource("TileSetAtlasSource_p68h2")

[node name="World-01" type="Node2D"]
script = ExtResource("1_yw1rq")
metadata/_edit_vertical_guides_ = [-34.0, 749.0]
metadata/_edit_horizontal_guides_ = [383.0, 384.0, -2.0]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAIAAQABAAAAAAABAAIAAQABAAAAAAD//wIAAQABAAAAAAD+/wIAAQAAAAAAAAACAAIAAQACAAAAAAACAAMAAQACAAEAAAACAAQAAQACAAEAAAACAAUAAQACAAEAAAACAAYAAQACAAEAAAACAAcAAQACAAEAAAACAAgAAQACAAEAAAACAAkAAQACAAEAAAACAAoAAQACAAEAAAACAAsAAQACAAEAAAACAAwAAQACAAEAAAACAA0AAQACAAEAAAACAA4AAQACAAEAAAACAA8AAQACAAEAAAACABAAAQACAAEAAAACABEAAQACAAEAAAACABIAAQACAAEAAAADABMAAQABAAEAAAAEABMAAQABAAEAAAAFABMAAQABAAEAAAADABIAAQABAAAAAAAEABIAAQABAAAAAAAFABIAAQABAAAAAAAGABIAAQABAAAAAAAHABIAAQABAAAAAAAIABIAAQABAAAAAAAJABIAAQABAAAAAAAKABIAAQABAAAAAAALABIAAQABAAAAAAAMABIAAQABAAAAAAANABIAAQABAAAAAAAOABIAAQABAAAAAAAPABIAAQABAAAAAAAQABIAAQABAAAAAAARABIAAQABAAAAAAASABIAAQACAAAAAAAZABIAAQAAAAAAAAAaABIAAQABAAAAAAAbABIAAQABAAAAAAAcABIAAQABAAAAAAAdABIAAQABAAAAAAAeABIAAQABAAAAAAAfABIAAQABAAAAAAAgABIAAQABAAAAAAAhABIAAQABAAAAAAAiABIAAQABAAAAAAAjABIAAQABAAAAAAAkABIAAQABAAAAAAAlABIAAQABAAAAAAAmABIAAQABAAAAAAADABQAAQABAAEAAAADABUAAQABAAEAAAADABYAAQABAAEAAAAEABQAAQABAAEAAAAEABUAAQABAAEAAAAEABYAAQABAAEAAAAFABQAAQABAAEAAAAFABUAAQABAAEAAAAFABYAAQABAAEAAAAGABMAAQABAAEAAAAGABQAAQABAAEAAAAGABUAAQABAAEAAAAGABYAAQABAAEAAAAHABMAAQABAAEAAAAHABQAAQABAAEAAAAHABUAAQABAAEAAAAHABYAAQABAAEAAAAIABMAAQABAAEAAAAIABQAAQABAAEAAAAIABUAAQABAAEAAAAIABYAAQABAAEAAAAJABMAAQABAAEAAAAJABQAAQABAAEAAAAJABUAAQABAAEAAAAJABYAAQABAAEAAAAKABMAAQABAAEAAAAKABQAAQABAAEAAAAKABUAAQABAAEAAAAKABYAAQABAAEAAAALABMAAQABAAEAAAALABQAAQABAAEAAAALABUAAQABAAEAAAALABYAAQABAAEAAAAMABMAAQABAAEAAAAMABQAAQABAAEAAAAMABUAAQABAAEAAAAMABYAAQABAAEAAAANABMAAQABAAEAAAANABQAAQABAAEAAAANABUAAQABAAEAAAANABYAAQABAAEAAAAOABMAAQABAAEAAAAOABQAAQABAAEAAAAOABUAAQABAAEAAAAOABYAAQABAAEAAAAPABMAAQABAAEAAAAPABQAAQABAAEAAAAPABUAAQABAAEAAAAPABYAAQABAAEAAAAQABMAAQABAAEAAAAQABQAAQABAAEAAAAQABUAAQABAAEAAAAQABYAAQABAAEAAAARABMAAQABAAEAAAARABQAAQABAAEAAAARABUAAQABAAEAAAARABYAAQABAAEAAAASABMAAQACAAEAAAASABQAAQACAAEAAAASABUAAQACAAEAAAASABYAAQACAAEAAAAZABMAAQAAAAEAAAAZABQAAQAAAAEAAAAZABUAAQAAAAEAAAAZABYAAQAAAAEAAAAaABMAAQABAAEAAAAaABQAAQABAAEAAAAaABUAAQABAAEAAAAaABYAAQABAAEAAAAbABMAAQABAAEAAAAbABQAAQABAAEAAAAbABUAAQABAAEAAAAbABYAAQABAAEAAAAcABMAAQABAAEAAAAcABQAAQABAAEAAAAcABUAAQABAAEAAAAcABYAAQABAAEAAAAdABMAAQABAAEAAAAdABQAAQABAAEAAAAdABUAAQABAAEAAAAdABYAAQABAAEAAAAeABMAAQABAAEAAAAeABQAAQABAAEAAAAeABUAAQABAAEAAAAeABYAAQABAAEAAAAfABMAAQABAAEAAAAfABQAAQABAAEAAAAfABUAAQABAAEAAAAfABYAAQABAAEAAAAgABMAAQABAAEAAAAgABQAAQABAAEAAAAgABUAAQABAAEAAAAgABYAAQABAAEAAAAhABMAAQABAAEAAAAhABQAAQABAAEAAAAhABUAAQABAAEAAAAhABYAAQABAAEAAAAiABMAAQABAAEAAAAiABQAAQABAAEAAAAiABUAAQABAAEAAAAiABYAAQABAAEAAAAjABMAAQABAAEAAAAjABQAAQABAAEAAAAjABUAAQABAAEAAAAjABYAAQABAAEAAAAkABMAAQABAAEAAAAkABQAAQABAAEAAAAkABUAAQABAAEAAAAkABYAAQABAAEAAAAlABMAAQABAAEAAAAlABQAAQABAAEAAAAlABUAAQABAAEAAAAlABYAAQABAAEAAAAmABMAAQABAAEAAAAmABQAAQABAAEAAAAmABUAAQABAAEAAAAmABYAAQABAAEAAAD+/wMAAQAAAAEAAAD+/wQAAQAAAAEAAAD+/wUAAQAAAAEAAAD+/wYAAQAAAAEAAAD+/wcAAQAAAAEAAAD+/wgAAQAAAAEAAAD+/wkAAQAAAAEAAAD+/woAAQAAAAEAAAD+/wsAAQAAAAEAAAD+/wwAAQAAAAEAAAD+/w0AAQAAAAEAAAD+/w4AAQAAAAEAAAD+/w8AAQAAAAEAAAD+/xAAAQAAAAEAAAD+/xEAAQAAAAEAAAD+/xIAAQAAAAEAAAD+/xMAAQAAAAEAAAD+/xQAAQAAAAEAAAD+/xUAAQAAAAEAAAD+/xYAAQAAAAEAAAD//wMAAQABAAEAAAD//wQAAQABAAEAAAD//wUAAQABAAEAAAD//wYAAQABAAEAAAD//wcAAQABAAEAAAD//wgAAQABAAEAAAD//wkAAQABAAEAAAD//woAAQABAAEAAAD//wsAAQABAAEAAAD//wwAAQABAAEAAAD//w0AAQABAAEAAAD//w4AAQABAAEAAAD//w8AAQABAAEAAAD//xAAAQABAAEAAAD//xEAAQABAAEAAAD//xIAAQABAAEAAAD//xMAAQABAAEAAAD//xQAAQABAAEAAAD//xUAAQABAAEAAAD//xYAAQABAAEAAAAAAAMAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAAAAAgAAQABAAEAAAAAAAkAAQABAAEAAAAAAAoAAQABAAEAAAAAAAsAAQABAAEAAAAAAAwAAQABAAEAAAAAAA0AAQABAAEAAAAAAA4AAQABAAEAAAAAAA8AAQABAAEAAAAAABAAAQABAAEAAAAAABEAAQABAAEAAAAAABIAAQABAAEAAAAAABMAAQABAAEAAAAAABQAAQABAAEAAAAAABUAAQABAAEAAAAAABYAAQABAAEAAAABAAMAAQABAAEAAAABAAQAAQABAAEAAAABAAUAAQABAAEAAAABAAYAAQABAAEAAAABAAcAAQABAAEAAAABAAgAAQABAAEAAAABAAkAAQABAAEAAAABAAoAAQABAAEAAAABAAsAAQABAAEAAAABAAwAAQABAAEAAAABAA0AAQABAAEAAAABAA4AAQABAAEAAAABAA8AAQABAAEAAAABABAAAQABAAEAAAABABEAAQABAAEAAAABABIAAQABAAEAAAABABMAAQABAAEAAAABABQAAQABAAEAAAABABUAAQABAAEAAAABABYAAQABAAEAAAACABMAAQABAAEAAAACABQAAQABAAEAAAACABUAAQABAAEAAAACABYAAQABAAEAAAAMAA8AAAARAAEAAAANAA8AAAASAAEAAAAOAA8AAAATAAEAAAAnABIAAQACAAAAAAAnABYAAQACAAEAAAAnABMAAQACAAEAAAAnABQAAQACAAEAAAAnABUAAQACAAEAAAD+/xcAAQAAAAEAAAD//xcAAQABAAEAAAAAABcAAQABAAEAAAABABcAAQABAAEAAAADABcAAQABAAEAAAAEABcAAQABAAEAAAAFABcAAQABAAEAAAAGABcAAQABAAEAAAAHABcAAQABAAEAAAAIABcAAQABAAEAAAAJABcAAQABAAEAAAAKABcAAQABAAEAAAALABcAAQABAAEAAAAMABcAAQABAAEAAAANABcAAQABAAEAAAAOABcAAQABAAEAAAAPABcAAQABAAEAAAAQABcAAQABAAEAAAARABcAAQABAAEAAAASABcAAQABAAEAAAAZABcAAQABAAEAAAAaABcAAQABAAEAAAAbABcAAQABAAEAAAAcABcAAQABAAEAAAAdABcAAQABAAEAAAAeABcAAQABAAEAAAAfABcAAQABAAEAAAAgABcAAQABAAEAAAAhABcAAQABAAEAAAAiABcAAQABAAEAAAAjABcAAQABAAEAAAAkABcAAQABAAEAAAAlABcAAQABAAEAAAAmABcAAQABAAEAAAAnABcAAQACAAEAAAACABcAAQABAAEAAAATABcAAQABAAAAAAAUABcAAQABAAAAAAAVABcAAQABAAAAAAAWABcAAQABAAAAAAAXABcAAQABAAAAAAAYABcAAQABAAAAAAAoABIAAQABAAAAAAApABIAAQABAAAAAAAqABIAAQABAAAAAAArABIAAQABAAAAAAAsABIAAQABAAAAAAAtABIAAQABAAAAAAAuABIAAQABAAAAAAAvABIAAQABAAAAAAAwABIAAQABAAAAAAAxABIAAQABAAAAAAAyABIAAQABAAAAAAAzABIAAQABAAAAAAA0ABIAAQABAAAAAAA1ABIAAQABAAAAAAA2ABIAAQABAAAAAAA3ABIAAQABAAAAAAA4ABIAAQABAAAAAAA5ABIAAQABAAAAAAA=")
tile_set = SubResource("TileSet_hlolr")
metadata/_edit_group_ = true

[node name="Door" parent="." instance=ExtResource("4_2e0v6")]
position = Vector2(522, 257)
script = ExtResource("5_q6a27")

[node name="Player" parent="." groups=["players"] instance=ExtResource("2_qyvkc")]
position = Vector2(99, 175)

[node name="MultiplayerHUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 70.0
offset_top = 234.0
offset_right = 180.0
offset_bottom = 269.0

[node name="Panel" type="Panel" parent="MultiplayerHUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUD/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostGame" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c0k8e")
theme_override_font_sizes/font_size = 8
text = "Host New Game"

[node name="JoinAsPlayer2" type="Button" parent="MultiplayerHUD/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_c0k8e")
theme_override_font_sizes/font_size = 8
text = "Join as Player 2"

[node name="Players" type="Node2D" parent="."]
position = Vector2(97, 118)

[node name="MultiplayerPlayer" parent="." groups=["players"] instance=ExtResource("8_ydye3")]
position = Vector2(142, 172)

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
visible = false
position = Vector2(320, 206)
script = ExtResource("10_ypiy8")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(-1, 0)
enabled = false
limit_left = 0
limit_bottom = 0

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("11_vbhd1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(315, 218)
script = ExtResource("11_xc86x")

[connection signal="body_entered" from="Door" to="Door" method="_on_Door_body_entered"]
[connection signal="body_exited" from="Door" to="Door" method="_on_Door_body_exited"]
[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/HostGame" to="." method="become_host"]
[connection signal="pressed" from="MultiplayerHUD/Panel/VBoxContainer/JoinAsPlayer2" to="." method="join_as_player_2"]
